--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin:0;
+  background: rgb(40, 37, 43);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.calculator-container {
+  display: grid;
+  margin-top: 1rem;
+  justify-content: center;
+  grid-template-columns: repeat(4, 5rem);
+  grid-template-rows: minmax(7rem, auto) repeat(7, 5rem);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.calculator-container > button{
+  cursor: pointer;
+  font-size: 1.5rem;
+  background-color:rgb(78, 72, 83);
+  color: white;
+  border-radius: 20%;
+  border: none;
+  outline: none;
+  margin: 0.2rem;
+  transition: 0.2s;
+}
+.calculator-container > button:hover {
+  background-color:rgb(101, 94, 107)
+}
+.screen {
+  grid-column: 1/ -1;
+  background-color:rgb(78, 72, 83);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: flex-end;
+  justify-content: space-around;
+  padding: 0.75rem;
+  word-wrap: break-word;
+  word-break: break-all;
+  border-radius: 15px;
+  margin: 0.2rem;
+}
+
+.screen .previous {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.screen .current {
+  color: white;
+  font-size: 2.5rem;
 }
